Header, about page, login page in routing, logout in route

--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  font-size: 50%;
+  color: #666;
+}
+
+* {
+  box-sizing: border-box;
 }
