--- a/src/components/LoadWrapper/styles.css
+++ b/src/components/LoadWrapper/styles.css
@@ -14,8 +14,8 @@
   font-size: 12px;
 }
 
-.loadWrapper .imageBackgroundStyles {
-  flex: 1;
-  width: 100%;
+.imageBackgroundStyles {
   height: 100%;
+  background-image: url('../../assets/images/bg.png');
+  background-size: cover;
 }
