Layout changes and couple of small navigational hixes

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -3,6 +3,7 @@
   background: #77ced7;
   color: #fff;
   padding: 10px;
+  height: 64px;
   border-bottom: solid 1px #eee;
   align-items: center;
 }
