--- a/src/components/LoadWrapper/styles.css
+++ b/src/components/LoadWrapper/styles.css
@@ -1,21 +1,19 @@
-.loadWrapper .container {
-  flex: 1;
-}
-
-.loadWrapper .centeredContainer {
+.centeredContainer {
   flex: 1;
   align-items: center;
   justify-content: center;
   margin: 30px;
 }
 
-.loadWrapper .loadingText {
+.loadingText {
   padding-top: 7px;
   font-size: 12px;
 }
 
 .imageBackgroundStyles {
-  height: 100%;
   background-image: url('../../assets/images/bg.png');
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
