--- a/src/pages/Room/styles.css
+++ b/src/pages/Room/styles.css
@@ -1,16 +1,22 @@
-.wrapper {
-  height: 100%;
+.room {
   background-image: url('../../assets/images/bg.png');
   background-size: cover;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
 }
 
-.details {
+.room .details {
   display: flex;
   height: 100px;
-  background-color: #fff;
+  background: #fff;
 }
 
-.roomImage {
+.room .roomImage {
   width: 100px;
   height: 80px;
   background-color: #eee;
@@ -19,24 +25,42 @@
   border: 0.5px solid #ccc;
 }
 
-.info {
+.room .info {
   flex-direction: column;
   margin-top: 5px;
   font-weight: bold;
 }
 
-.info p {
+.room .info .prop {
   margin: 5px 0;
 }
 
-.slots ul {
-  /* height: 475px; */
-  overflow-y: scroll;
-  /* display: flex;
-  flex-direction: column; */
+.room .information {
+  display: flex;
+  flex-direction: column;
 }
 
-.sectionHeader {
+.room .slots {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.room .slots .scrollable-wrapper {
+  flex: 1;
+  position: relative;
+}
+
+.room .slots .scrollable {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: auto;
+}
+
+.room .sectionHeader {
   padding: 10px;
   padding-top: 19px;
   padding-bottom: 7px;
