--- a/src/components/QRCodeReader/styles.css
+++ b/src/components/QRCodeReader/styles.css
@@ -40,10 +40,11 @@
   border: 0 !important;
 }
 
-.qr-code-reader.container input {
+.qr-code-reader.container .submit_btn {
   height: 50px;
   background: #77ced7;
   color: #fff;
   font-size: 1rem;
   line-height: 1;
+  border: none;
 }
