--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -8,17 +8,16 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-image: url('../../assets/images/bg.png');
-  background-size: cover;
 }
 
 .login .loginPanel {
   padding: 15px;
   margin: 30px;
   margin-bottom: 10px;
-  border: 0.5px solid #aaa;
+  border: 0.5px solid #ddd;
   border-radius: 10px;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.9);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .login .input {
@@ -28,8 +27,9 @@
   padding-inline-start: 10px;
   padding-inline-end: 10px;
   margin-bottom: 10px;
-  border: 0.5px solid #aaa;
+  border: 0.5px solid #ddd;
   font-size: 14px;
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
 .login .button {
