--- a/src/components/List/styles.css
+++ b/src/components/List/styles.css
@@ -90,7 +90,11 @@
   flex: 1;
 }
 
-.list .checkboxDisabled {
+.list .disabled {
   opacity: 0.5;
   background: rgba(0, 0, 0, 0.05);
+}
+
+.list .highlighted {
+  background-color: rgba(119, 206, 215, 0.1);
 }
