--- a/src/pages/Room/styles.css
+++ b/src/pages/Room/styles.css
@@ -13,6 +13,10 @@
   border: 0.5px solid #ccc;
 }
 
+.roomDetails {
+  font-weight: normal;
+}
+
 .noSlots {
   height: 52px;
   padding-left: 10px;
