added splash screen, which is removed on componentDidMount

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .app {
-  background-image: url('assets/images/splash.png');
+  background-image: url('assets/images/splash.webp');
   background-position: center;
   background-size: cover;
 
